add tests to the build

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,7 +31,20 @@ jobs:
         uses: docker/build-push-action@471d1dc4e07e5cdedd4c2171150001c434f0b7a4 # v6.15.0
         with:
           push: true
+          cache-from: type=registry,ref=ghcr.io/${{ github.repository }}:test
+          tags: ghcr.io/${{ github.repository }}:test
+          target: test
+          platforms: linux/amd64
+          labels: |
+            ${{ steps.meta.outputs.labels }}
+      - name: Test
+        run: docker run --rm ghcr.io/${{ github.repository }}:test bundle exec rspec
+      - name: Build and push
+        uses: docker/build-push-action@471d1dc4e07e5cdedd4c2171150001c434f0b7a4 # v6.15.0
+        with:
+          push: true
           tags: ghcr.io/${{ github.repository }}:latest
+          cache-from: type=registry,ref=ghcr.io/${{ github.repository }}:latest
           platforms: linux/amd64
           labels: |
             ${{ steps.meta.outputs.labels }}
