--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,8 +37,8 @@ jobs:
           platforms: linux/amd64
           labels: |
             ${{ steps.meta.outputs.labels }}
-      - name: Test
-        run: docker run --rm ghcr.io/${{ github.repository }}:test bundle exec rspec
+      - name: Test and Lint
+        run: docker run --rm ghcr.io/${{ github.repository }}:test bundle exec rake default
       - name: Build and push
         uses: docker/build-push-action@471d1dc4e07e5cdedd4c2171150001c434f0b7a4 # v6.15.0
         with:
