--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,7 +1,6 @@
 name: build and publish
 on:
   push:
-    branches: [main]
   workflow_dispatch:
 permissions:
   contents: read
@@ -10,6 +9,19 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
+      - name: Get branch name
+        id: main_check
+        run: |
+          if [ "${GITHUB_REF#refs/heads/}" == "main" ]; then
+            IS_MAIN=true
+          else
+            IS_MAIN=false
+          fi
+          echo "IS_MAIN=$IS_MAIN" >> $GITHUB_OUTPUT
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@29109295f81e9208d7d86ff1c6c12d2833863392 # v3.6.0
 
@@ -42,7 +54,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@471d1dc4e07e5cdedd4c2171150001c434f0b7a4 # v6.15.0
         with:
-          push: true
+          push: ${{ steps.main_check.outputs.IS_MAIN }}
           tags: ghcr.io/${{ github.repository }}:latest
           cache-from: type=registry,ref=ghcr.io/${{ github.repository }}:latest
           platforms: linux/amd64
