--- a/.env.dist
+++ b/.env.dist
@@ -4,6 +4,9 @@ SONARR_API_KEY=12345
 RADARR_URL=http://sonarr:7878
 RADARR_API_KEY=12345
 
+BAZARR_URL=http://bazarr:6767
+BAZARR_API_KEY=12345
+
 RAILS_ENV=production
 
 SUMMARY_DAYS=7
