update dist and readme

--- a/.env.dist
+++ b/.env.dist
@@ -7,6 +7,9 @@ RADARR_API_KEY=12345
 BAZARR_URL=http://bazarr:6767
 BAZARR_API_KEY=12345
 
+LIDARR_URL=http://lidarr:8686
+LIDARR_API_KEY=12345
+
 RAILS_ENV=production
 
 SUMMARY_DAYS=7
