--- a/.env.dist
+++ b/.env.dist
@@ -10,6 +10,12 @@ BAZARR_API_KEY=12345
 LIDARR_URL=http://lidarr:8686
 LIDARR_API_KEY=12345
 
+READARR_URL=http://readarr:8787
+READARR_API_KEY=12345
+
+MYLAR3_URL=http://mylar3:8090
+MYLAR3_API_KEY=12345
+
 RAILS_ENV=production
 
 SUMMARY_DAYS=7
