--- a/.github/workflows/renovate-dependency-check.yml
+++ b/.github/workflows/renovate-dependency-check.yml
@@ -42,7 +42,7 @@ jobs:
         uses: renovatebot/github-action@02f4fdeb479bbb229caa7ad82cb5e691c07e80b3 # v41.0.14
         with:
           configurationFile: .github/renovate-config.js
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{secrets.REPO_SCOPED_TOKEN}}
         env:
           LOG_LEVEL: '${{ steps.vars.outputs.LOG_LEVEL }}'
           RENOVATE_RECREATE_WHEN: '${{ steps.vars.outputs.RECREATE_PRS }}'
