--- a/.github/workflows/pr-housekeeping.yml
+++ b/.github/workflows/pr-housekeeping.yml
@@ -7,11 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     name: 'PR housekeeping'
     permissions:
-      id-token: write
-      contents: write
-      statuses: write
-      issues: write
-      pull-requests: write
+      contents: read
     steps:
       - name: wait for labels
         run: |
@@ -47,7 +43,7 @@ jobs:
             });
 
             const titleRegex = new RegExp(/.*upgrade|updating.*/,"i")
-            if (labelNames.some(item => allowedLabels.includes(item))) {
+            if (actor_id == "5182053" && actor == "phyzical" && titleRegex.test(title) && labelNames.some(item => allowedLabels.includes(item))) {
                 // Sadly the rest api does not support enableAutomerge
                 const mutation = `mutation($pullRequestId:ID!, $mergeMethod:PullRequestMergeMethod) {
                     enablePullRequestAutoMerge(input: {pullRequestId: $pullRequestId, mergeMethod: $mergeMethod}) {
@@ -58,4 +54,15 @@ jobs:
                 await github.graphql(mutation, {
                     pullRequestId: node_id, mergeMethod: "SQUASH"
                 })
+
+                //If anything is common between the two list of labels auto approve
+                // if (labelNames.some(item => allowedLabels.includes(item))) {
+                //     // Autoapprove
+                //     await github.rest.pulls.createReview({
+                //         owner,
+                //         repo,
+                //         pull_number,
+                //         event: "APPROVE"
+                //     })
+                // }
             }
