add a spec for the new config

--- a/.env.dist
+++ b/.env.dist
@@ -17,7 +17,10 @@ MYLAR3_URL=http://mylar3:8090
 MYLAR3_API_KEY=12345
 
 DISCORD_WEBHOOK_URL=
+DISCORD_USERNAME=
+DISCORD_AVATAR_URL=
 
 RAILS_ENV=production
 
 SUMMARY_DAYS=7
+RERUN_INTERVAL_DAYS=7
