--- a/.env.dist
+++ b/.env.dist
@@ -16,6 +16,8 @@ READARR_API_KEY=12345
 MYLAR3_URL=http://mylar3:8090
 MYLAR3_API_KEY=12345
 
+TDARR_URL=http://tdarr:8266
+
 DISCORD_WEBHOOK_URL=
 DISCORD_USERNAME=
 DISCORD_AVATAR_URL=
