--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,6 +21,7 @@ jobs:
             IS_MAIN=false
           fi
           echo "IS_MAIN=$IS_MAIN" >> $GITHUB_OUTPUT
+          echo "IMAGE_VERSION=$(cat .ruby-version)" >> $GITHUB_OUTPUT
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@29109295f81e9208d7d86ff1c6c12d2833863392 # v3.6.0
@@ -47,6 +48,8 @@ jobs:
           tags: ghcr.io/${{ github.repository }}:test
           target: test
           platforms: linux/amd64
+          build-args: |
+            RUBY_VERSION=${{ steps.main_check.outputs.IMAGE_VERSION }}
           labels: |
             ${{ steps.meta.outputs.labels }}
       - name: Test and Lint
@@ -58,5 +61,7 @@ jobs:
           tags: ghcr.io/${{ github.repository }}:latest
           cache-from: type=registry,ref=ghcr.io/${{ github.repository }}:latest
           platforms: linux/amd64
+          build-args: |
+            RUBY_VERSION=${{ steps.main_check.outputs.IMAGE_VERSION }}
           labels: |
             ${{ steps.meta.outputs.labels }}
